--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="feature_cat">Feature Settings</string>
     <string name="route_list">Route</string>
     <string name="route_list_summary">Bypass IP addresses in the route list</string>
+    <string name="protocol_list">Protocol</string>
     <string name="auto_set_proxy">Global Proxy</string>
     <string name="auto_set_proxy_summary">Set up system-wide proxy</string>
     <string name="proxied_apps">Per-App Proxy</string>
