--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -69,7 +69,7 @@
   <string name="recovery">重置</string>
   <string name="about">关于</string>
   <string name="about_title">xTun %s</string>
-  <string name="add_profile">添加配置文件</string>
+  <string name="add_profile">新增配置</string>
   <string name="error">错误</string>
 
   <string-array name="route_entry">
